--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,5 +1,5 @@
 footer {
-  background-color: beige;
+  background-color: transparent;
   padding: 20px 0;
   margin-top: 40px;
 }
@@ -30,7 +30,7 @@ footer {
 }
 
 .quick-icon a {
-  color: #333;
+  color: inherit;
   text-decoration: none;
   font-weight: bold;
   padding: 8px 15px;
