--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,5 +1,5 @@
 .home {
-  background-color: floralwhite;
+  background-color: transparent;
   min-height: 100vh;
 }
 
