--- a/src/components/Products.css
+++ b/src/components/Products.css
@@ -1,5 +1,5 @@
 .products {
-  background-color: floralwhite;
+  background-color: transparent;
   min-height: 100vh;
   padding: 20px 0;
 }
