--- a/src/components/Services.css
+++ b/src/components/Services.css
@@ -1,5 +1,5 @@
 .services {
-  background-color: floralwhite;
+  background-color: transparent;
   min-height: 100vh;
   padding: 20px 0;
 }
